--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse justify-content-end" id="nav-content">
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/docs">Docs</a>
+        <a class="nav-link" href="{{ site.baseurl }}/docs/{{ site.latest }}">Docs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/javadoc">Java</a>
