fix remaining baseurl issues

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,32 +1,31 @@
 <nav class="navbar navbar-default navbar-toggleable-xl container">
   <a class="navbar-brand" href="{{ site.baseurl }}">
-    <img src="{{ site.baseurl }}/img/pulsar-logo.png">
+    <img src="{{ site.baseurl }}img/pulsar-logo.png">
   </a>
 
   <div class="collapse navbar-collapse justify-content-end" id="nav-content">
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/docs/{{ site.latest }}">Docs</a>
+        <a class="nav-link" href="{{ site.baseurl }}docs/{{ site.latest }}">Docs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/javadoc">Java</a>
+        <a class="nav-link" href="{{ site.baseurl }}javadoc">Java</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/api/cpp">C++</a>
+        <a class="nav-link" href="{{ site.baseurl }}api/cpp">C++</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/api/python">Python</a>
+        <a class="nav-link" href="{{ site.baseurl }}api/python">Python</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/ja"><img class="japan-flag" src="{{ site.baseurl }}/img/japan-flag.svg"></a>
+        <a class="nav-link" href="{{ site.baseurl }}ja"><img class="japan-flag" src="{{ site.baseurl }}img/japan-flag.svg"></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://github.com/yahoo/pulsar"><i class="fa fa-github fa-lg"></i></a>
       </li>
       <li class="nav-item version">
-        <a class="nav-link">Pulsar {{ site.latest }}</a>
+        <a class="nav-link">Pulsar {{ site.current_version }}</a>
       </li>
     </ul>
-
   </div>
 </nav>
