--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -5,8 +5,8 @@
     <h4>{{ group.title }}</h4>
     <ul>
       {% for doc in group.docs %}
-      {% capture doc_url %}{{ site.baseurl }}/docs/{{ site.current_version }}/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
-      {% capture page_url %}{{ site.baseurl }}{{ page.url }}{% endcapture %}
+      {% capture doc_url %}{{ site.baseurl }}docs/{{ site.current_version }}/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+      {% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
       <li><a {% if page_url == doc_url %} class="active"{% endif %}href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
       {% endfor %}
     </ul>
