--- a/site/_sass/_navbar.scss
+++ b/site/_sass/_navbar.scss
@@ -2,14 +2,19 @@ nav.navbar {
   background-color: white;
   width: 80%;
 
-  .navbar-brand {
-    img {
+  img {
+    &.main-logo {
       height: 40px;
+    }
+
+    &.japan-flag {
+      height: 28px;
+      border: 1px solid darken(#ddd, 10%);
     }
   }
 
   .collapse {
-    margin: 8px 0 0 100px;
+    margin: 8px 0 8px 100px;
 
     ul.navbar-nav {
       li.nav-item + li.nav-item {
@@ -32,51 +37,3 @@ nav.navbar {
     }
   }
 }
-
-/*header.top-nav {
-  background-color: white;
-
-  nav.navbar {
-    width: 80%;
-
-    a.navbar-brand {
-      img {
-        height: 50px;
-        padding-bottom: 5px;
-      }
-    }
-
-    img.japan-flag {
-      height: 20px;
-      border: 1px solid #999;
-    }
-
-    li.version {
-      a {
-        padding: 10px;
-        color: white;
-        background-color: $pulsar-blue;
-      }
-    }
-
-    ul li a {
-      color: $pulsar-blue;
-      font-size: 24px;
-
-      &:hover {
-        color: lighten($pulsar-blue, 10%);
-      }
-
-      i.fa {
-        color: white;
-
-        &:hover {
-          color: lighten($pulsar-blue, 10%);
-        }
-      }
-    }
-
-    li + li {
-      margin-left: 50px;
-    }
-  }*/
