--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -1,16 +1,18 @@
 {% unless page.sidebar_disable == true %}
-<ul class="sidebar">
-  {% for group in site.data.sidebar.groups %}
-  <section class="sidebar-group">
-    <h4>{{ group.title }}</h4>
-    <ul>
-      {% for doc in group.docs %}
-      {% capture doc_url %}{{ site.baseurl }}docs/{{ site.current_version }}/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
-      {% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
-      <li><a {% if page_url == doc_url %} class="active"{% endif %}href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </section>
-  {% endfor %}
-</ul>
+<aside class="sidebar">
+  <ul>
+    {% for group in site.data.sidebar.groups %}
+    <section class="sidebar-group">
+      <h4>{{ group.title }}</h4>
+      <ul>
+        {% for doc in group.docs %}
+        {% capture doc_url %}{{ site.baseurl }}docs/{{ site.current_version }}/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+        {% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
+        <li><a {% if page_url == doc_url %} class="active"{% endif %}href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </section>
+    {% endfor %}
+  </ul>
+</aside>
 {% endunless %}
