--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -293,7 +293,7 @@ aside.sidebar {
         min-width: 200px; }
     .rest-api-container article section.content p + table, .rest-api-container article section.content table + p, .rest-api-container article section.content table + h4, .rest-api-container article section.content h4 + .highlighter-rouge, .docs-container article section.content p + table, .docs-container article section.content table + p, .docs-container article section.content table + h4, .docs-container article section.content h4 + .highlighter-rouge {
       margin-top: 20px; }
-    .rest-api-container article section.content .highlighter-rouge + table, .docs-container article section.content .highlighter-rouge + table {
+    .rest-api-container article section.content .highlighter-rouge + table, .rest-api-container article section.content .highlighter-rouge + h4, .docs-container article section.content .highlighter-rouge + table, .docs-container article section.content .highlighter-rouge + h4 {
       margin-top: 20px; }
 
 a.download-btn {
