Added ASF Incubator images and disclaimer (#3)

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <p class="text-center">&copy; Apache Foundation {{ 'now' | date: '%Y'}}</p>
+    <p class="text-center">Copyright {{'now' | date: '%Y'}} The Apache Software Foundation. All Rights Reserved.</p>
   </div>
 </footer>
