layout changes to index and downloads page

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -74,20 +74,20 @@
             Community
           </a>
           <div class="dropdown-menu" aria-labelledby="versionsDropdown">
-              <a class="dropdown-item" href="{{ site.baseurl }}mailing-lists">Mailing Lists</a>
-              <a class="dropdown-item" href="https://twitter.com/Apache_Pulsar">Twitter</a>
-              <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/wiki">Wiki</a>
-              <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/issues">Issue tracking</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{{ site.baseurl }}presentations">Presentations</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}mailing-lists">Mailing Lists</a>
+            <a class="dropdown-item" href="https://twitter.com/Apache_Pulsar">Twitter</a>
+            <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/wiki">Wiki</a>
+            <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/issues">Issue tracking</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{{ site.baseurl }}presentations">Presentations</a>
             <a class="dropdown-item" href="{{ site.baseurl }}team">Team</a>
           </div>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="http://www.apache.org/">
-                <img title="Apache Software Foundation" src="{{site.baseurl}}img/feather.png" height="48px" />
-            </a>
+          <a class="nav-link" href="http://www.apache.org/">
+            <img class="asf-logo" title="Apache Software Foundation" src="{{site.baseurl}}img/feather.png" />
+          </a>
         </li>
     </ul>
   </div>
