--- a/site/_sass/_navbar.scss
+++ b/site/_sass/_navbar.scss
@@ -13,6 +13,10 @@ nav.navbar {
       height: 28px;
       border: 1px solid darken(#ddd, 10%);
     }
+
+    &.asf-logo {
+      height: 28px;
+    }
   }
 
   li.nav-item {
