--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -19,21 +19,50 @@
 
 -->
 {% unless page.sidebar_disable == true %}
-<aside class="sidebar">
-  <ul>
+<!-- <aside class="sidebar">
+  {% for group in site.data.sidebar.groups %}
+  <section class="sidebar-group">
+    <h4>{{ group.title }}</h4>
+    <ul>
+      {% for doc in group.docs %}
+      {% capture doc_url %}{{ site.baseurl }}docs/latest/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+      {% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
+      <li><a {% if page_url == doc_url %} class="active"{% endif %}
+              href="{{ doc_url }}">{{ doc.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </section>
+  {% endfor %}
+</aside>
+-->
+{% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
+<aside class="sidebar-nav">
+  <div id="sidebar-accordion" role="tablist" aria-multiselectable="true">
     {% for group in site.data.sidebar.groups %}
-    <section class="sidebar-group">
-      <h4>{{ group.title }}</h4>
-      <ul>
-        {% for doc in group.docs %}
-        {% capture doc_url %}{{ site.baseurl }}docs/latest/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
-        {% capture page_url %}{{ site.baseurl }}{{ page.url | remove_first: "/" }}{% endcapture %}
-        <li><a {% if page_url == doc_url %} class="active"{% endif %}
-                href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
+    {% assign slug = group.title | slugify %}
+    <div class="card">
+      <div class="card-header" role="tab" id="heading-{{ slug }}">
+        <h5>
+          <a data-toggle="collapse" data-parent="#sidebar-accordion" href="#collapse-{{ slug }}"{% if false %} aria-exanded="true"{% endif %} aria-controls="collapse-{{ slug }}">
+            {{ group.title }}
+          </a>
+        </h5>
+      </div>
+
+      <div class="sidebar-group collapse" id="collapse-{{ slug }}" role="tabpanel" aria-labelledby="heading-{{ slug }}">
+        <ul>
+          {% for doc in group.docs %}
+          {% capture doc_url %}{{ site.baseurl }}docs/latest/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+          <li>
+            <a {% if page_url == doc_url %} class="active"{% endif %} href="{{ doc_url }}">
+              {{ doc.title }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
     {% endfor %}
-  </ul>
+  </div>
 </aside>
 {% endunless %}
