--- a/site/_layouts/content.html
+++ b/site/_layouts/content.html
@@ -27,7 +27,7 @@ layout: default
 <div class="docs-container container-fluid">
   <div class="row">
 
-    <article class="col-xs-12 col-sm-12 col-md-7 col-lg-7" style="max-width: 85%; flex: initial; margin-left: auto; margin-right: auto;">
+    <article class="content col-xs-12 col-sm-12 col-md-7 col-lg-7">
       <section class="docs-header">
         <h1 class="docs-title">{{ page.title }}</h1>
         {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span><br />{% endif %}
