add expandable sidebar with local storage

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -36,4 +36,5 @@
 <script src="{{ site.baseurl }}js/jquery.tocify.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 {% if page.math %}<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>{% endif %}
+<script src="{{ site.baseurl }}js/jquery.scrollTo.min.js"></script>
 <script async src="{{ site.baseurl }}js/main.js"></script>
