--- a/site/_sass/_tocify.scss
+++ b/site/_sass/_tocify.scss
@@ -32,6 +32,10 @@
       color: $brand-secondary;;
       border-left: 4px solid $brand-secondary;
     }
+
+    &:hover {
+      color: purple;
+    }
   }
 
   .tocify-subheader {
