remove Kubernetes Makefile

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -21,7 +21,7 @@
 <script type="text/javascript">
   var shiftWindow = function() { scrollBy(0, -108) };
   window.addEventListener("hashchange", shiftWindow);
-  window.addEventListener("pageshow", shiftWindow);
+  //window.addEventListener("pageshow", shiftWindow);
   function load() { if (window.location.hash) shiftWindow(); }
 </script>
 
