--- a/site/_layouts/docs.html
+++ b/site/_layouts/docs.html
@@ -26,11 +26,11 @@ layout: default
 
 <div class="docs-container container-fluid">
   <div class="row">
-    <nav class="sidebar-nav hidden-sm-down col-md-3 col-lg-3">
+    <nav class="sidebar-nav hidden-md-down col-lg-3">
       {% include sidebar.html %}
     </nav>
 
-    <article class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+    <article class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
       <section class="docs-header">
         <h1 class="docs-title">{{ page.title }}</h1>
         {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span><br />{% endif %}
@@ -50,7 +50,7 @@ layout: default
       </section>
     </article>
 
-    <nav class="toc-bar hidden-sm-down col-md-2 col-lg-2">
+    <nav class="toc-bar hidden-md-down col-lg-2">
       {% unless page.toc_disable %}
       <div id="toc">
         <h4>{{ page.title }}</h4>
