more content for kubernetes doc

--- a/site/_sass/_sidebar.scss
+++ b/site/_sass/_sidebar.scss
@@ -54,6 +54,10 @@ aside.sidebar-nav {
                 text-decoration: none;
               }
             }
+
+            & + li {
+              margin-top: .2rem;
+            }
           }
         }
       }
