--- a/site/_sass/_variables.scss
+++ b/site/_sass/_variables.scss
@@ -34,7 +34,7 @@ $brand-danger: lighten(#EA122F, 15%);
 $brand-warning: lighten(#FDB220, 10%);
 
 // Syntax highlighting
-$sx-border-radius: 5px;
+$sx-border-radius: 0;
 $sx-border: none;
 $sx-bg-color: rgb(35, 41, 55);
 $sx-light-gray: lighten(#93a1a1, 15%); // light gray
