--- a/site/_sass/_admonition.scss
+++ b/site/_sass/_admonition.scss
@@ -1,7 +1,7 @@
 @mixin admon($main-color) {
-  padding: 20px;
   background-color: lighten($main-color, 25%);
   color: darken($main-color, 30%);
+  padding: 1rem;
 
   span.admonition-title {
     p {
@@ -21,8 +21,7 @@
 }
 
 .admonition {
-  margin: 25px 0;
-  padding: 0;
+  margin: 1rem 0;
 
   p {
     margin: 0;
