--- a/site/_sass/_tocify.scss
+++ b/site/_sass/_tocify.scss
@@ -45,6 +45,7 @@
   .tocify-subheader {
     text-indent: 10px;
     display: none;
+    margin: .5rem 0;
 
     li {
       font-size: $root-font-size * 0.9;
@@ -52,6 +53,7 @@
 
     .tocify-subheader {
       text-indent: $root-indent * 2;
+      margin: .2rem 0;
 
       li {
         font-size: $root-font-size * 0.8;
