fix CSS in table of contents

--- a/site/_sass/_tocify.scss
+++ b/site/_sass/_tocify.scss
@@ -48,6 +48,8 @@
 
     li {
       font-size: $root-font-size * 0.9;
+      padding-top: .25rem;
+      padding-bottom: .25rem;
     }
 
     .tocify-subheader {
